.kube/services/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - env:
            - name: SECRET_KEY
              value: AS;DKFJLH197H8FYOIutyo&tyouyp(8UY%&^())
            - name: DB_LINK
              value: postgresql+asyncpg://postgresql:postgresql@10.108.234.60:5432/user_db
            - name: ALGORITHM
              value: HS256
            - name: S3_BUCKET_NAME
              value: test-bucket
            - name: S3_URL
              value: s3.labofdev.ru
            - name: MINIO_ACCESS_KEY
              value: NCitCJJY49q8ZY4YiLP4
            - name: MINIO_SECRET_KEY
              value: GdUd3KB6KJOEAP7YStpJmAO9QFX9C25EId2XXn5C
          name: worker
          image: xoriax/axenix-bank-data-storage-worker:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/app: worker
spec:
  selector:
    app: worker
  type: ClusterIP
