.kube/services/external-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posos-service
  labels:
    app: posos-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posos-service
  template:
    metadata:
      labels:
        app: posos-service
    spec:
      containers:
        - env:
            - name: SECRET_KEY
              value: AS;DKFJLH197H8FYOIutyo&tyouyp(8UY%&^())
            - name: DB_LINK
              value: postgresql+asyncpg://postgresql:postgresql@10.108.234.60:5432/raw_data
            - name: ALGORITHM
              value: HS256
            - name: S3_BUCKET_NAME
              value: s3-raw
            - name: S3_URL
              value: s3.labofdev.ru
            - name: MINIO_ACCESS_KEY
              value: NCitCJJY49q8ZY4YiLP4
            - name: MINIO_SECRET_KEY
              value: GdUd3KB6KJOEAP7YStpJmAO9QFX9C25EId2XXn5C
            - name: ELASTICSEARCH_URL
              value: https://elastic.labofdev.ru:443
            - name: KAFKA_URL
              value: 10.104.194.106:9092
          name: posos-service
          image: xoriax/axenix-bank-data-storage-external-api:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: posos-service
  labels:
    app.kubernetes.io/name: posos-service
    app.kubernetes.io/app: posos-service
spec:
  selector:
    app: posos-service
  type: ClusterIP
  ports:
    - name: http
      targetPort: 4001
      port: 4001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 256m
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
  labels:
    app.kubernetes.io/name: posos-service
    app.kubernetes.io/app: posos-service
  name: posos-service
spec:
  ingressClassName: nginx
  rules:
    - host: rsue-api.labofdev.ru
      http:
        paths:
          - backend:
              service:
                name: posos-service
                port:
                  number: 4001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rsue-api.labofdev.ru
      secretName: rsue-api.labofdev.ru
