.kube/services/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice
  labels:
    app: user-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-microservice
  template:
    metadata:
      labels:
        app: user-microservice
    spec:
      containers:
        - env:
            - name: SECRET_KEY
              value: AS;DKFJLH197H8FYOIutyo&tyouyp(8UY%&^())
            - name: DB_LINK
              value: postgresql+asyncpg://postgresql:postgresql@10.108.234.60:5432/user_db
            - name: ALGORITHM
              value: HS256
            - name: S3_BUCKET_NAME
              value: test-bucket
            - name: S3_URL
              value: s3.labofdev.ru
            - name: MINIO_ACCESS_KEY
              value: NCitCJJY49q8ZY4YiLP4
            - name: MINIO_SECRET_KEY
              value: GdUd3KB6KJOEAP7YStpJmAO9QFX9C25EId2XXn5C
          name: user-microservice
          image: xoriax/axenix-bank-data-storage-user:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: user-microservice
  labels:
    app.kubernetes.io/name: user-microservice
    app.kubernetes.io/app: user-microservice
spec:
  selector:
    app: user-microservice
  type: ClusterIP
  ports:
    - name: http
      targetPort: 4000
      port: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 256m
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
  labels:
    app.kubernetes.io/name: user-microservice
    app.kubernetes.io/app: user-microservice
  name: user-microservice
spec:
  ingressClassName: nginx
  rules:
    - host: rsue-auth.labofdev.ru
      http:
        paths:
          - backend:
              service:
                name: user-microservice
                port:
                  number: 4000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rsue-auth.labofdev.ru
      secretName: rsue-auth.labofdev.ru
